MIT-443: Make sure images that are aligned right actually align right

--- a/assets/styles/mixins/gutenbergBlocks/image.css
+++ b/assets/styles/mixins/gutenbergBlocks/image.css
@@ -67,7 +67,7 @@
 
     :global(.alignright) {
       float: right;
-      margin: 0 0 rem(36) rem(36);
+      margin: rem(30) -13.33% rem(20) calc(8.33%);
     }
 
     :global(.aligncenter) {
